--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,62 @@
-# Core dependencies
-asyncio>=3.4.3
-aiofiles>=23.2.1
-
-# Web framework for REST API
-fastapi>=0.104.1
-uvicorn[standard]>=0.24.0
-pydantic>=2.5.0
-pydantic-settings>=2.1.0
-
-# Database
-sqlalchemy>=2.0.23
-asyncpg>=0.29.0  # PostgreSQL async driver
-aiosqlite>=0.19.0  # SQLite async driver
-alembic>=1.12.1  # Database migrations
-
-# Authentication
-PyJWT>=2.8.0
-passlib>=1.7.4
-bcrypt>=4.1.1
-python-multipart>=0.0.6
-
-# Configuration
-PyYAML>=6.0.1
-python-dotenv>=1.0.0
-
-# Logging and monitoring
-python-json-logger>=2.0.7
-colorlog>=6.8.0
-
-# Utilities
-python-dateutil>=2.8.2
-
-# Testing (optional, for development)
-pytest>=7.4.3
-pytest-asyncio>=0.21.1
-pytest-cov>=4.1.0
-httpx>=0.25.2  # For testing FastAPI
-
-# Development tools (optional)
-black>=23.11.0
-flake8>=6.1.0
-mypy>=1.7.1
-isort>=5.12.0
+aiofiles==25.1.0
+aiosqlite==0.21.0
+alembic==1.17.0
+annotated-types==0.7.0
+anyio==4.11.0
+asyncio==4.0.0
+asyncpg==0.30.0
+bcrypt==5.0.0
+black==25.9.0
+certifi==2025.10.5
+click==8.3.0
+colorlog==6.9.0
+coverage==7.11.0
+dnspython==2.8.0
+email-validator==2.3.0
+fastapi==0.119.0
+flake8==7.3.0
+greenlet==3.2.4
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.7.1
+httpx==0.28.1
+idna==3.11
+iniconfig==2.1.0
+isort==7.0.0
+Mako==1.3.10
+MarkupSafe==3.0.3
+mccabe==0.7.0
+mypy==1.18.2
+mypy_extensions==1.1.0
+packaging==25.0
+passlib==1.7.4
+pathspec==0.12.1
+platformdirs==4.5.0
+pluggy==1.6.0
+pycodestyle==2.14.0
+pydantic==2.12.2
+pydantic-settings==2.11.0
+pydantic_core==2.41.4
+pyflakes==3.4.0
+Pygments==2.19.2
+PyJWT==2.10.1
+pytest==8.4.2
+pytest-asyncio==1.2.0
+pytest-cov==7.0.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+python-json-logger==4.0.0
+python-multipart==0.0.20
+pytokens==0.2.0
+PyYAML==6.0.3
+scapy==2.6.1
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.44
+starlette==0.48.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+uvicorn==0.37.0
+uvloop==0.21.0
+watchfiles==1.1.1
+websockets==15.0.1
